<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="-1dp"
    tools:layout_editor_absoluteY="102dp">


    <TextView
        android:id="@+id/PageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainTitle"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />

    <TextView
        android:id="@+id/Label01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Label01"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />

    <TextView
        android:id="@+id/Label02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Label02"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548" />

    <TextView
        android:id="@+id/PlaceHolderPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PlaceHolderPercentage"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.606" />

    <TextView
        android:id="@+id/Label03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Label03"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.692" />

    <TextView
        android:id="@+id/PlaceHolderTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PlaceHolderTotal"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.756" />

    <EditText
        android:id="@+id/OriginalPrice"
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="297dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27" />

    <Button
        android:id="@+id/Second_Percentage"
        android:layout_width="90dp"
        android:layout_height="43dp"
        android:backgroundTint="@color/white"
        android:text="@string/Second_Percentage"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364" />

    <Button
        android:id="@+id/First_Percentage"
        android:layout_width="90dp"
        android:layout_height="43dp"
        android:backgroundTint="@color/white"
        android:text="@string/First_Percentage"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364" />

    <Button
        android:id="@+id/Third_Percentage"
        android:layout_width="90dp"
        android:layout_height="43dp"
        android:backgroundTint="@color/white"
        android:text="@string/Third_Percentage"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364" />

    <Button
        android:id="@+id/Sixth_Percentage"
        android:layout_width="90dp"
        android:layout_height="43dp"
        android:backgroundTint="@color/white"
        android:text="@string/Sixth_Percentage"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />

    <Button
        android:id="@+id/Forth_Percentage"
        android:layout_width="90dp"
        android:layout_height="43dp"
        android:backgroundTint="@color/white"
        android:text="@string/Forth_Percentage"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />

    <Button
        android:id="@+id/Fifth_Percentage"
        android:layout_width="90dp"
        android:layout_height="43dp"
        android:backgroundTint="@color/white"
        android:text="@string/Fifth_Percentage"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />

    <Button
        android:id="@+id/Button_Tip"
        android:layout_width="125dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/white"
        android:text="@string/Button_Tip"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.895" />

    <Button
        android:id="@+id/Button_Discount"
        android:layout_width="125dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/white"
        android:text="@string/Button_Discount"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.895" />

</androidx.constraintlayout.widget.ConstraintLayout>